...
                                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="backBarButtonItem"/>
                                            </userDefinedRuntimeAttributes>
                                            <connections>
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Fist name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2D7-k0-f9k">
                                        <rect key="frame" x="20" y="50.666666666666664" width="374" height="29.999999999999993"/>
                                        <accessibility key="accessibilityConfiguration" identifier="firstNameTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="450" id="E94-Qh-0Um"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U3q-df-BLo">
                                        <rect key="frame" x="20" y="90.666666666666657" width="374" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="lastNameTextField"/>
                                        <color key="textColor" red="0.40528047080000001" green="0.47204595799999999" blue="0.60492491719999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k5R-za-6Jc">
                                        <rect key="frame" x="20" y="173.66666666666669" width="374" height="30.000000000000028"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                        <color key="textColor" red="0.40528047080000001" green="0.47204595799999999" blue="0.60492491719999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="74s-2m-NUF">
                                        <rect key="frame" x="20" y="213.66666666666669" width="374" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                        <color key="textColor" red="0.40528047080000001" green="0.47204595799999999" blue="0.60492491719999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6nq-bi-eUC">
                                        <rect key="frame" x="20" y="253.66666666666669" width="374" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="confirmPasswordTextField"/>
                                        <color key="textColor" red="0.40528047080000001" green="0.47204595799999999" blue="0.60492491719999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Personal Information" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kQQ-Ag-D5w">
                                        <rect key="frame" x="20" y="25" width="150.66666666666666" height="20.666666666666671"/>
                                        <accessibility key="accessibilityConfiguration" identifier="informationStaticText"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="20" y="298.66666666666669" width="374" height="45"/>
                                        <color key="backgroundColor" red="0.63921568627450975" green="0.63921568627450975" blue="0.63921568627450975" alpha="0.34999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="submitButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="iT7-bv-WIO"/>
...
