...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DEM-MI-bM8" customClass="AttributedButton" customModule="PiHome" customModuleProvider="target">
                                                    <rect key="frame" x="695" y="65" width="50" height="50"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="stateButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="50" id="TRY-l8-jpo"/>
...
                                                    <rect key="frame" x="695" y="65" width="50" height="50"/>
                                                    <color key="backgroundColor" red="0.57647058819999997" green="0.7843137255" blue="0.41568627450000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="switchButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="50" id="VJZ-h0-8hH"/>
...
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="devicesTableView"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="menuBarButtonItem"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="jR8-01-Fjr" customClass="AttributedBarButtonItem" customModule="PiHome" customModuleProvider="target">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addDeviceBarButtonItem"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
                                        <rect key="frame" x="159" y="0.0" width="450" height="568.5"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Device name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pMj-L1-OKP">
                                                <rect key="frame" x="20" y="30" width="410" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="nameTextField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="30" id="KpU-rr-iV0"/>
...
                                                <rect key="frame" x="20" y="142.5" width="410" height="100"/>
                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <accessibility key="accessibilityConfiguration" identifier="descriptionTextView"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="100" id="WPP-c0-rhh"/>
...
                                                <rect key="frame" x="20" y="498.5" width="410" height="50"/>
                                                <color key="backgroundColor" red="0.39607843139999999" green="0.45882352939999999" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="createButton"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="zs1-Di-Gv9"/>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                                                        <color key="backgroundColor" red="0.39607843139999999" green="0.45882352939999999" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="switchStateButton"/>
                                                        <constraints>
                                                            <constraint firstAttribute="width" constant="30" id="akp-cU-gnL"/>
...
                                                        <rect key="frame" x="45" y="0.0" width="30" height="30"/>
                                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="buttonStateButton"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
...
