...
                                                <constraint firstAttribute="trailingMargin" secondItem="6Df-b8-y5r" secondAttribute="trailing" id="3tV-Ie-nwn"/>
                                                <constraint firstItem="6Df-b8-y5r" firstAttribute="top" secondItem="W9r-9S-MqF" secondAttribute="topMargin" id="ToC-Fw-kKj"/>
                                                <constraint firstAttribute="bottomMargin" secondItem="6Df-b8-y5r" secondAttribute="bottom" id="Zzd-UW-crh"/>
                                                <constraint firstItem="6Df-b8-y5r" firstAttribute="leading" secondItem="W9r-9S-MqF" secondAttribute="leadingMargin" constant="10" id="ng0-lZ-fO2"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="devicesTableViewCell"/>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                            <tableViewSection headerTitle="Account" id="nYZ-D3-Z7i">
                                <cells>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="UsersRestorationIdentifier" selectionStyle="none" indentationWidth="10" rowHeight="50" id="YWa-EP-Pra">
...
                                                <constraint firstItem="aZ1-Na-ceg" firstAttribute="bottom" secondItem="m9U-5O-NMK" secondAttribute="bottomMargin" id="RrL-Uh-6fG"/>
                                                <constraint firstItem="aZ1-Na-ceg" firstAttribute="top" secondItem="m9U-5O-NMK" secondAttribute="topMargin" id="Y79-CM-hbB"/>
                                                <constraint firstItem="aZ1-Na-ceg" firstAttribute="trailing" secondItem="m9U-5O-NMK" secondAttribute="trailingMargin" id="eHf-dY-4Zr"/>
                                                <constraint firstItem="aZ1-Na-ceg" firstAttribute="leading" secondItem="m9U-5O-NMK" secondAttribute="leadingMargin" constant="10" id="vGy-5l-JS1"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="usersTableViewCell"/>
                                    </tableViewCell>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="LogoutRestorationIdentifier" selectionStyle="none" indentationWidth="10" id="i2E-Pp-fFF">
                                        <rect key="frame" x="0.0" y="188" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="i2E-Pp-fFF" id="NQZ-pS-YiZ">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
...
                                                <constraint firstAttribute="bottom" secondItem="1Gw-G9-to7" secondAttribute="bottom" id="8uc-xk-ZNi"/>
                                                <constraint firstItem="1Gw-G9-to7" firstAttribute="leading" secondItem="NQZ-pS-YiZ" secondAttribute="leadingMargin" constant="10" id="YqN-Xb-1a3"/>
                                                <constraint firstAttribute="trailing" secondItem="1Gw-G9-to7" secondAttribute="trailing" constant="10" id="rdZ-Nt-dHV"/>
                                                <constraint firstItem="1Gw-G9-to7" firstAttribute="top" secondItem="NQZ-pS-YiZ" secondAttribute="top" id="xwh-9o-5Bs"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="logOutTableViewCell"/>
                                    </tableViewCell>
                                </cells>
                            </tableViewSection>
                        </sections>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="menuTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="9Ca-Fg-efD" id="cD5-Kg-S8H"/>
                            <outlet property="delegate" destination="9Ca-Fg-efD" id="zWv-NM-mIw"/>
                        </connections>
                    </tableView>
...
